--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "chance": "^1.0.4",
     "react": "15.3.2",
     "react-native": "0.33.0"
   }
