--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "chance": "^1.0.4",
     "react": "15.3.2",
-    "react-native": "0.33.0"
+    "react-native": "0.33.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
